Add Erethon base attributes to all entities
WIP

--- a/mcdevimports.conf
+++ b/mcdevimports.conf
@@ -27,4 +27,6 @@ library-imports=[]
 #    "net.minecraft.world.entity.ai.goal.PathfinderGoalFishSchool",
 #    "net.minecraft.world.level.levelgen.feature.WorldGenFlowers"
 # ]
-nms-imports=[]
+nms-imports=[
+    "net.minecraft.world.entity.ai.attributes.AttributeBase"
+]
